// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render text field wrapper 1`] = `
<div>
  <div
    class=""
    data-testid="text-field"
  >
    <div
      class=""
    >
      <input
        aria-invalid="false"
        class=""
        id="operator"
        placeholder="Test Placeholder"
        type="text"
        value="test value"
      />
    </div>
    
  </div>
</div>
`;

exports[`render text field wrapper with readonly as true 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
    id="operator"
  >
    test value
  </span>
</div>
`;

exports[`render text field wrapper with readonly as true showing - for empty value 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
    id="operator"
  >
    -
  </span>
</div>
`;

exports[`render text field wrapper with readonly as true with a ReadOnlyComponent 1`] = `
<div>
  <div
    data-testid="custom-readonly-text"
    id="test-readonly-component-id"
  >
    used custom readonly component
  </div>
</div>
`;

exports[`render text field wrapper with readonly as true with showing empty value 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
    id="operator"
  >
    
  </span>
</div>
`;
